# taxi_demand_predictor

./: .gitattributes  .gitignore  certfile  keyfile  pyproject.toml
data/transformed/: ts_data_2023_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  07_xgbosst_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  13_model_training_pipeline_.ipynb  14_inference_pipeline.ipynb
src/: config.py  data.py  data_split.py  frontend.py  inference.py  paths.py
