[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
jupyter = "^1.0.0"
pyarrow = "^15.0.2"
pandas = "^2.2.2"
tqdm = "^4.66.2"
plotly = "^5.21.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
