[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.31.0"
pyarrow = "^15.0.2"
pandas = "^2.2.2"
tqdm = "^4.66.2"
plotly = "^5.21.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
optuna = "^3.6.1"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
plotly-express = "^0.4.1"
joblib = "^1.4.0"
geopandas = "^0.14.3"
streamlit = "^1.33.0"
pydeck = "^0.8.0"
discordwebhook = "^1.0.3"
comet-ml = "^3.41.0"
retry = "^0.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"